--- a/src/index.css
+++ b/src/index.css
@@ -1,3 +1,8 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body {
+  font-family: Poppins, system-ui, Avenir, Helvetica, Arial, sans-serif;
+  color: #373737;
+}
